--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.5.0",
     "core-js": "^3.6.4",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "vue": "^2.6.11",
     "vue-core-video-player": "^0.1.1"
   },
